--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nock": "^12.0.3"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "console-stamp": "^0.2.9",
     "dotenv": "^8.2.0",
     "isomorphic-git": "^1.4.0",
