--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,3 +9,5 @@ roles_path = ops/roles
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = true
+
+vault_password_file = vault.key
