--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 env:
   AUTHOR_NAME: 'AmbaNum Bot'
   AUTHOR_EMAIL: 'ambanum.bot@disinfo.quaidorsay.fr'
-
+  ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
 jobs:
   deploy:
 
@@ -19,13 +19,13 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.17'
-    - name: Install SSH key
-      uses: shimataro/ssh-key-action@v2
+    - name: Checkout data repo
+      uses: actions/checkout@v2
       with:
-        key: ${{ secrets.SSH_KEY }}
-        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        repository: ambanum/CGUs-data
+        path: CGUs-data
+    - run: echo "$ANSIBLE_VAULT_PASSWORD" > vault.key
     - run: npm ci
-    - run: git submodule update --init --recursive
     - run: npm test
     - run: pip install --upgrade setuptools
     - run: pip install ansible
