--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:scheduler": "node schedule.js",
     "start:scheduler:prod": "NODE_ENV=production node schedule.js",
     "test": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
+    "test:ci": "NODE_ENV=ci mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
     "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit"
   },
   "repository": {
