--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,9 @@ on:
     branches: [ master ]
 
 env:
+  SENDINBLUE_API_KEY: ${{ secrets.SENDINBLUE_API_KEY }}
   ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
+
 jobs:
   deploy:
 
