--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsdom": "^16.2.2",
     "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2",
+    "sib-api-v3-sdk": "^7.2.3",
     "simple-git": "^2.6.0",
     "turndown": "^6.0.0"
   }
