--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "chai": "^4.2.0",
     "inquirer": "^7.3.0",
     "mocha": "^7.2.0",
-    "nock": "^12.0.3",
-    "shelljs": "^0.8.4"
+    "nock": "^12.0.3"
   },
   "dependencies": {
     "async": "^3.2.0",
