--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:scheduler:prod": "NODE_ENV=production node schedule.js",
     "setup": "node scripts/setup.js",
     "test": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
-    "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit"
+    "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
+    "validate": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --serviceId"
   },
   "repository": {
     "type": "git",
@@ -27,8 +28,10 @@
   },
   "homepage": "https://github.com/ambanum/CGUs#readme",
   "devDependencies": {
+    "ajv": "^6.12.3",
     "chai": "^4.2.0",
     "inquirer": "^7.3.0",
+    "json-source-map": "^0.6.1",
     "mocha": "^7.2.0",
     "nock": "^12.0.3"
   },
