--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
     - run: npm test
     - run: pip install --upgrade setuptools
     - run: pip install ansible
-    - run: ansible-playbook ops/app.yml -i ops/inventories/production.yml -t update
+    - run: ansible-playbook ops/site.yml -i ops/inventories/production.yml
