Use minimalistic selectors

--- a/services/Apple.json
+++ b/services/Apple.json
@@ -3,7 +3,7 @@
     "documents": {
         "privacy": {
             "location": "https://www.apple.com/legal/privacy/en-ww/",
-            "contentSelector": "main[role=main]"
+            "contentSelector": "main"
         }
     }
 }
