--- a/services/AppleAppStore.json
+++ b/services/AppleAppStore.json
@@ -3,7 +3,7 @@
     "documents": {
         "reviewGuidelines": {
             "location": "https://developer.apple.com/app-store/review/guidelines/",
-            "contentSelector": "main[role=main]"
+            "contentSelector": "main"
         }
     }
 }
