--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -18,6 +18,7 @@ rules:
   - objectsInArrays: false
     arraysInArrays: false
     singleValue: false
+  eqeqeq: 0
   chai-friendly/no-unused-expressions: 2
   comma-dangle: 0
   consistent-return: 0
