--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:scheduler": "node schedule.js",
     "start:scheduler:prod": "NODE_ENV=production node schedule.js",
     "setup": "node scripts/setup.js",
-    "pretest": "./node_modules/eslint/bin/eslint.js ./test/*.js ./src/*.js ./services/*.js",
+    "lint": "./node_modules/eslint/bin/eslint.js ./test/**/*.js ./src/**/*.js ./services/**/*.js",
+    "posttest": "npm run lint",
     "test": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
     "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
     "validate": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --serviceId"
