Update service document declarations

--- a/services/Apple.json
+++ b/services/Apple.json
@@ -2,8 +2,8 @@
     "name": "Apple",
     "documents": {
         "privacy": {
-            "location": "https://www.apple.com/legal/privacy/en-ww/",
-            "contentSelector": "main"
+            "fetch": "https://www.apple.com/legal/privacy/en-ww/",
+            "select": "main"
         }
     }
 }
