--- a/services/AppleAppStore.json
+++ b/services/AppleAppStore.json
@@ -2,8 +2,8 @@
     "name": "Apple App Store",
     "documents": {
         "reviewGuidelines": {
-            "location": "https://developer.apple.com/app-store/review/guidelines/",
-            "contentSelector": "main"
+            "fetch": "https://developer.apple.com/app-store/review/guidelines/",
+            "select": "main"
         }
     }
 }
