--- a/services/WhatsApp.json
+++ b/services/WhatsApp.json
@@ -2,12 +2,12 @@
     "name": "WhatsApp",
     "documents": {
         "tos": {
-            "location": "https://www.whatsapp.com/legal?eea=1",
-            "contentSelector": "div._-pj:nth-child(3)"
+            "fetch": "https://www.whatsapp.com/legal?eea=1",
+            "select": "div._-pj:nth-child(3)"
         },
         "privacy": {
-            "location": "https://www.whatsapp.com/legal?eea=1",
-            "contentSelector": "div._-pj:nth-child(4)"
+            "fetch": "https://www.whatsapp.com/legal?eea=1",
+            "select": "div._-pj:nth-child(4)"
         }
     }
 }
