--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "start:scheduler:prod": "NODE_ENV=production node schedule.js",
     "setup": "node scripts/setup.js",
     "lint": "./node_modules/eslint/bin/eslint.js ./test/**/*.js ./src/**/*.js ./services/**/*.js",
-    "lint:fix": "./node_modules/eslint/bin/eslint.js ./test/**/*.js ./src/**/*.js ./services/**/*.js --fix",
     "posttest": "npm run lint",
     "test": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
     "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
     "validate": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --serviceId",
-    "validate:schema": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --schemaOnly --serviceId"
+    "validate:schema": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --schema-only --serviceId"
   },
   "repository": {
     "type": "git",
