--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "node": ">=12.17"
   },
   "scripts": {
-    "start": "node index.js",
-    "start:prod": "NODE_ENV=production node index.js",
-    "start:scheduler": "node schedule.js",
-    "start:scheduler:prod": "NODE_ENV=production node schedule.js",
-    "setup": "node scripts/setup.js",
+    "start": "node --experimental-json-modules index.js",
+    "start:prod": "NODE_ENV=production node --experimental-json-modules index.js",
+    "start:scheduler": "node --experimental-json-modules schedule.js",
+    "start:scheduler:prod": "NODE_ENV=production node --experimental-json-modules schedule.js",
+    "setup": "node --experimental-json-modules scripts/setup.js",
     "lint": "./node_modules/eslint/bin/eslint.js ./test/**/*.js ./src/**/*.js ./services/**/*.js",
     "posttest": "npm run lint",
-    "test": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
-    "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
-    "validate": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --serviceId",
-    "validate:schema": "NODE_ENV=validation mocha --file './test/helper.js' scripts/validation/validate.js --schema-only --serviceId"
+    "test": "NODE_ENV=test node --experimental-json-modules ./node_modules/mocha/bin/_mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
+    "test:debug": "NODE_ENV=test node --experimental-json-modules ./node_modules/mocha/bin/_mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
+    "validate": "NODE_ENV=validation node --experimental-json-modules ./node_modules/mocha/bin/_mocha --file './test/helper.js' scripts/validation/validate.js --serviceId",
+    "validate:schema": "NODE_ENV=validation node --experimental-json-modules ./node_modules/mocha/bin/_mocha --file './test/helper.js' scripts/validation/validate.js --schema-only --serviceId"
   },
   "repository": {
     "type": "git",
