--- a/services/AppleAppStore.json
+++ b/services/AppleAppStore.json
@@ -1,7 +1,7 @@
 {
   "name": "Apple App Store",
   "documents": {
-    "reviewGuidelines": {
+    "Review Guidelines": {
       "fetch": "https://developer.apple.com/app-store/review/guidelines/",
       "select": "main"
     }
