Require one space inside brackets of array literals that contain a single element

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -17,7 +17,7 @@ rules:
   - always
   - objectsInArrays: false
     arraysInArrays: false
-    singleValue: false
+    singleValue: true
   eqeqeq: 0
   chai-friendly/no-unused-expressions: 2
   comma-dangle: 0
