--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
     "inquirer": "^7.3.0",
     "json-source-map": "^0.6.1",
     "mocha": "^7.2.0",
-    "nock": "^12.0.3"
+    "nock": "^12.0.3",
+    "pg": "^8.3.0",
+    "xml2json": "^0.12.0",
+    "xpath-to-css": "^1.0.5"
   },
   "dependencies": {
     "config": "^3.3.1",
