--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "console-stamp": "^0.2.9",
+    "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
     "http-proxy-agent": "^4.0.1",
     "https-proxy-agent": "^5.0.0",
