--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "xpath-to-css": "^1.0.5"
   },
   "dependencies": {
+    "@accordproject/markdown-cicero": "^0.12.4",
+    "@accordproject/markdown-pdf": "^0.12.4",
     "config": "^3.3.1",
     "console-stamp": "^0.2.9",
     "dotenv": "^8.2.0",
