--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
   },
   "dependencies": {
     "config": "^3.3.1",
-    "console-stamp": "^0.2.9",
     "dotenv": "^8.2.0",
     "http-proxy-agent": "^4.0.1",
     "https-proxy-agent": "^5.0.0",
@@ -58,6 +57,7 @@
     "node-schedule": "^1.3.2",
     "sib-api-v3-sdk": "^7.2.3",
     "simple-git": "^2.17.0",
-    "turndown": "^6.0.0"
+    "turndown": "^6.0.0",
+    "winston": "^3.3.3"
   }
 }
