--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "https-proxy-agent": "^5.0.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
     "jsdom": "^16.2.2",
+    "mime": "^2.4.6",
     "node-fetch": "^2.6.0",
     "node-schedule": "^1.3.2",
     "sib-api-v3-sdk": "^7.2.3",
