--- a/services/App Store.json
+++ b/services/App Store.json
@@ -1,5 +1,5 @@
 {
-  "name": "Apple App Store",
+  "name": "App Store",
   "documents": {
     "Review Guidelines": {
       "fetch": "https://developer.apple.com/app-store/review/guidelines/",
