Add environment variables  examples

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 SENDINBLUE_API_KEY='xkeysib-3f51c…'
+SMTP_HOST='smtp-relay.sendinblue.com'
+SMTP_USERNAME='user@domain.example'
+SMTP_PASSWORD='password'
