--- a/package.json
+++ b/package.json
@@ -44,11 +44,8 @@
     "json-source-map": "^0.6.1",
     "mocha": "^7.2.0",
     "nock": "^12.0.3",
-    "pg": "^8.3.0",
     "sinon": "^9.0.3",
-    "sinon-chai": "^3.5.0",
-    "xml2json": "^0.12.0",
-    "xpath-to-css": "^1.0.5"
+    "sinon-chai": "^3.5.0"
   },
   "dependencies": {
     "@accordproject/markdown-cicero": "^0.12.4",
