Improve configuration and environment doc

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+NODE_ENV=production
 SENDINBLUE_API_KEY='xkeysib-3f51c…'
 SMTP_HOST='smtp-relay.sendinblue.com'
 SMTP_USERNAME='user@domain.example'
