--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '12.17'
+        node-version: 12.x
     - run: npm ci
     - run: |
         git config --global user.name 'AmbNum Bot'
