--- a/.github/workflows/validate_modified_services.yml
+++ b/.github/workflows/validate_modified_services.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '12.17'
+        node-version: 12.x
     - run: npm ci
     - run: npm run validate:modified
