Always test in all operating systems

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,8 @@ jobs:
 
     strategy:
       matrix:
-        operating_system:
-        - ubuntu-latest
-        - windows-2019
+        operating_system: [ ubuntu-latest, windows-2019 ]
+      fail-fast: false  # run tests on other operating systems even if one fails
 
     runs-on: ${{ matrix.operating_system }}
 
