fixing windows pathing issues and environement variables

--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "start:prod": "NODE_ENV=production node src/index.js",
+    "start:prod": "cross-env NODE_ENV=production node src/index.js",
     "start:scheduler": "node src/index.js --schedule",
-    "start:scheduler:prod": "NODE_ENV=production node src/index.js --schedule",
+    "start:scheduler:prod": "cross-env NODE_ENV=production node src/index.js --schedule",
     "refilter": "node src/index.js --refilter-only",
     "setup": "node scripts/setup.js",
     "lint": "./node_modules/.bin/eslint test src services",
     "posttest": "npm run lint",
-    "test": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
-    "test:debug": "NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
-    "validate": "NODE_ENV=validation node --unhandled-rejections=strict ./node_modules/.bin/mocha --delay --file './test/helper.js' scripts/validation/validate.js",
+    "test": "cross-env NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
+    "test:debug": "cross-env NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
+    "validate": "cross-env NODE_ENV=validation node --unhandled-rejections=strict node_modules/mocha/bin/_mocha --delay --file './test/helper.js' scripts/validation/validate.js",
     "validate:schema": "npm run validate -- --schema-only",
     "validate:modified": "npm run validate -- --modified-only"
   },
@@ -36,6 +36,7 @@
     "ajv": "^6.12.3",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "cross-env": "^7.0.2",
     "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
