--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "mime": "^2.4.6",
     "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
+    "puppeteer": "^5.3.1",
     "sib-api-v3-sdk": "^7.2.3",
     "simple-git": "^2.17.0",
     "turndown": "^6.0.0",
