--- a/services/WhatsApp.json
+++ b/services/WhatsApp.json
@@ -2,12 +2,14 @@
   "name": "WhatsApp",
   "documents": {
     "Terms of Service": {
-      "fetch": "https://www.whatsapp.com/legal?eea=1",
-      "select": "div._-pj:nth-child(3)"
+      "fetch": "https://www.whatsapp.com/legal/terms-of-service-eea?lang=en",
+      "select": "._2zry",
+      "remove": "[href='#top-of-page']"
     },
     "Privacy Policy": {
-      "fetch": "https://www.whatsapp.com/legal?eea=1",
-      "select": "div._-pj:nth-child(4)"
+      "fetch": "https://www.whatsapp.com/legal/privacy-policy-eea?lang=en",
+      "select": "._2zry",
+      "remove": "[href='#top-of-page']"
     }
   }
 }
