--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "node": ">=12.17"
   },
   "scripts": {
-    "start": "node src/index.js",
-    "start:modified": "node src/index.js -- --modified-only",
-    "start:prod": "cross-env NODE_ENV=production node src/index.js",
-    "start:scheduler": "node src/index.js --schedule",
-    "start:scheduler:prod": "cross-env NODE_ENV=production node src/index.js --schedule",
+    "start": "node --max-http-header-size=16384 src/index.js",
+    "start:modified": "node --max-http-header-size=16384 src/index.js -- --modified-only",
+    "start:prod": "cross-env NODE_ENV=production node --max-http-header-size=16384  src/index.js",
+    "start:scheduler": "node --max-http-header-size=16384 src/index.js --schedule",
+    "start:scheduler:prod": "cross-env NODE_ENV=production node --max-http-header-size=16384 src/index.js --schedule",
     "refilter": "node src/index.js --refilter-only",
     "setup": "node scripts/setup.js",
     "lint": "./node_modules/.bin/eslint test src services",
     "posttest": "npm run lint",
     "test": "cross-env NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\"",
     "test:debug": "cross-env NODE_ENV=test mocha --file './test/helper.js' --recursive \"./src/**/*.test.js\" --inspect-brk --exit",
-    "validate": "cross-env NODE_ENV=validation npx --node-arg=--unhandled-rejections=strict node_modules/.bin/mocha --delay --file './test/helper.js' scripts/validation/validate.js",
+    "validate": "cross-env NODE_ENV=validation npx --node-arg=--unhandled-rejections=strict --node-arg=--max-http-header-size=16384 node_modules/.bin/mocha --delay --file './test/helper.js' scripts/validation/validate.js",
     "validate:schema": "npm run validate -- --schema-only",
     "validate:modified": "npm run validate -- --modified-only"
   },
