--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@accordproject/markdown-cicero": "^0.12.4",
     "@accordproject/markdown-pdf": "^0.12.4",
     "async": "^3.2.0",
+    "chai-exclude": "^2.0.2",
     "config": "^3.3.1",
     "cross-env": "^7.0.2",
     "datauri": "^3.0.0",
