--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cross-env": "^7.0.2",
     "datauri": "^3.0.0",
     "dotenv": "^8.2.0",
+    "fs-extra": "^9.0.1",
     "http-proxy-agent": "^4.0.1",
     "https-proxy-agent": "^5.0.0",
     "joplin-turndown-plugin-gfm": "^1.0.12",
