--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "node-fetch": "^2.6.1",
     "node-schedule": "^1.3.2",
     "puppeteer": "^5.3.1",
+    "puppeteer-extra": "^3.1.15",
+    "puppeteer-extra-plugin-stealth": "^2.6.5",
     "sib-api-v3-sdk": "^7.2.3",
     "simple-git": "^2.17.0",
     "turndown": "^6.0.0",
